--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="Daan van Monsjou">	
 	<meta name="keywords" content="Daan van Monsjou, techjournalist, freelance">
 	<meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js averagenl.github.io github.com daanvanmonsjou.nl daanvanmonsjou.nl/script.js cdn.report-uri.com 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po=' daanvanmonsjou.nl/*  daanvanmonsjou.nl/script.js eff.org cdn.report-uri.com platform.twitter.com syndication.twitter.com cdn.syndication.twimg.com youtube.com https://static.doubleclick.net/instream/ad_status.js; frame-src datawrapper.dwcdn.net https://www.youtube.com/ twitter.com https://s.ytimg.com https://platform.twitter.com syndication.twitter.com cdn.syndication.twimg.com; child-src 'self' https://www.youtube.com/ https://s.ytimg.com; style-src 'self' daanvanmonsjou.nl/* daanvanmonsjou.nl/script.js https://daanvanmonsjou.nl/script.js 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po=' https://platform.twitter.com/css/ fonts.googleapis.com 'self'; font-src fonts.gstatic.com; object-src 'self'; img-src https: data:; script-src-elem 'self' daanvanmonsjou.nl/* daanvanmonsjou.nl/script.js 'sha256-sNINh+kurY8RLvJai+7ElQLjpy40s9I4LeVp32TcQ/o=' eff.org https://cdn.report-uri.com/libs/report-uri-js/1.0.1/report-uri-js.min.js https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js https://cdn.syndication.twimg.com/tweets.json https://platform.twitter.com/ 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po='; style-src-attr 'self' daanvanmonsjou.nl/* daanvanmonsjou.nl/script.js 'sha256-TSdVhERf7QyenIlQ77eiEVSvNjCg/FQ544mYSaRUgYw=' 'sha256-sNINh+kurY8RLvJai+7ElQLjpy40s9I4LeVp32TcQ/o=' 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po='; media-src 'self' https://www.youtube.com; upgrade-insecure-requests; connect-src daanvanmonsjou.report-uri.com; report-uri https://daanvanmonsjou.report-uri.com; frame-ancestors 'none'; base-uri 'self'; form-action 'none';">
-	<title>Daan van Monsjou - Freelance techjournalist</title>
+	<title>Daan van Monsjou - Freelance technology journalist</title>
 	
 	<!-- style -->
 	<link href="stylesheet.css" rel="stylesheet">
@@ -23,33 +23,33 @@
 <body>
 	<header>
 		<h1>Daan van Monsjou</h1>
-		<h2>freelance (tech)journalist</h2>
+		<h2>freelance technology journalist</h2>
 		<br>
 		<hr>
 	</header>
 	<div>
 		<br>
-		<h4>👨‍💻 Over mij</h4>
-		<p>Hi! Ik ben Daan, freelance journalist en derdejaars student Journalistiek.</p>
-		<p>Momenteel ben ik freelancer voor de nieuwsredactie van <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>, waar ik eerder stage liep. </p>
-		<p>Voorheen schreef ik nieuwsberichten voor <a href="https://overclock3d.net" target = "_blank">OC3D</a> en <a href="https://www.invader.be/" target = "_blank">Invader</a>.</p>
-		<p>Ik schrijf voornamelijk artikelen over technologie, waaronder computerhardware en -software, videogames, privacy/security en wetenschap.</p>
+		<h4>👨‍💻 About Me</h4>
+		<p>Hi! I'm Daan, freelance technology journalist and Journalism student.</p>
+		<p>Currently, I'm a freelance news editor for <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>, a Dutch tech publication. I also used to be an intern there.</p>
+		<p>I used to write news articles for <a href="https://overclock3d.net" target = "_blank">OC3D</a> (English) and Invader <a href="https://www.invader.be/" target = "_blank">Invader</a> (Dutch).</p>
+		<p>I mostly write about technology, including computer hardware and -software, video games, privacy/security and science.</p>
 		<br>
-		<h4>📝 Mijn werk</h4>
-		<p>Benieuwd naar mijn werk? Bekijk dan <a href="https://daanvanmonsjou.nl/portfolio">mijn portfolio</a>.</p>
-		<p>Ik schrijf ook artikelen voor mijn opleiding. Deze vind je op <a href="https://medium.com/@DaanvanMonsjou" target = "_blank">Medium</a>.</p>
+		<h4>📝 My Work</h4>
+		<p>Curious about my work? Have a look at <a href="https://daanvanmonsjou.com/portfolio">my portfolio</a>.</p>
+		<p>Sometimes, I write stuff for college (in Dutch). You'll find these articles on <a href="https://medium.com/@DaanvanMonsjou" target = "_blank">Medium</a>.</p>
 	</div>
 	<div>
 		<br>
 		<h4>💬 Contact</h4>
-		<p>Je kunt me op de volgende manieren bereiken:
+		<p>You can reach me in the following ways:</p>
 		<br><br>
 		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail</a> | 
 		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
 		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
 		<div id="hover-area">
-			<p id="telefoonklik">Telefoon (klik om te onthullen)</p>
+			<p id="telefoonklik">Phone (click to reveal)</p>
 			
 		<div id="reveal">
 			<code>+31 (0)6 2604 5919
@@ -58,7 +58,7 @@
       </div>
 	</div>
 		<br>
-		<p>Wil je gevoelige informatie met me delen of blijf je gewoon liever anoniem? <a href="/contact">Klik dan hier</a>.</p>
+		<p>Would you like to share sensitive information with me or would you simply prefer to remain anonymous? That's all good! Simply <a href="/contact">click here</a>.</p>
 		<br><br>
 		<hr>
 		</p>
