--- a/contact.html
+++ b/contact.html
@@ -16,44 +16,43 @@
 <body>
 	
 <div id="title">
-	<h3>Anoniem contact opnemen</h3><hr><br>
+	<h3>Contact me anonymously</h3><hr><br>
 </div>
 
 <div id="text">
-	<p>Wil je liever anoniem contact met me opnemen, bijvoorbeeld om gevoelige informatie te delen? Dat kan! Hieronder vind je enkele (veilige) manieren om me te bereiken.</p>
-	<p>Is anonimiteit niet noodzakelijk? Kijk dan op <a href="https://daanvanmonsjou.nl/">mijn homepage</a> voor overige contactgegevens.</p>
+	<p>Would you rather contact me anonymously, for example to share sensitive information? That's possible! Below you'll find some (safe) ways to reach me.</p>
+	<p>Isn't anonimity a neccessity? Check out <a href="https://daanvanmonsjou.nl/">my homepage</a> for other contact details.</p>
 	
 <div id="proton">
 	<h4>📧  Protonmail</h4>
-	<p>De makkelijkste manier om veilig en anoniem contact met me op te nemen, is met <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, een veilige e-maildienst. 
-	Gebruik bij voorkeur de <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> voor het aanmaken van een anoniem Protonmail-adres.</p>
-	<p>Stuur je bericht vervolgens via je nieuwe Protonmail-adres naar <a href="mailto:daanvanmonsjou@protonmail.com">daanvanmonsjou@protonmail.com</a>.
-	Je mail komt dan volledig versleuteld bij me aan.</p>
-	<p>Tip: Protonmail heeft een <a href="https://protonirockerxow.onion/" target = "_blank">aparte website</a> voor gebruik met de Tor-browser. Deze link kun je niet openen met een 'gewone' webbrowser.</p>
+	<p>The easiest way to reach me securely and anonymously, is using <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, a secure e-mail service based in Switzerland. 
+	<p>If possible, please use the <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> when creating an anonymous Protonmail-account.</p>
+	<p>After you've done that, send your message to <a href="mailto:daanvanmonsjou@protonmail.com">daanvanmonsjou@protonmail.com</a>. Your e-mail will reach me fully encrypted.</p>
+	<p>Tip: Protonmail has a <a href="https://protonirockerxow.onion/" target = "_blank">separate website</a> specifically for the Tor-browser. You can't open this link using a 'regular' webbrowser like Chrome or Firefox.</p>
 </div>
 	
 <div id="PGP">
 	<h4>🔐  PGP</h4>
-	<p>Je kunt eventueel gebruikmaken van PGP om de inhoud van je email te versleutelen. Dit kun je doen met je eigen software, bijvoorbeeld <a href="https://www.gpg4win.org" target = "_blank">Gpg4win</a> voor Windows of <a href="https://gpgtools.org/" target = "_blank">GPG Suite</a> voor macOS. Op deze manier weet je zeker dat je bericht alleen door mij wordt gelezen.</p>
-	<p>Je kunt mijn public key hier <a href="/files/pgp-public.txt" target = "_blank">bekijken</a> of <a href="/files/PGP-DaanvM-F82472E95EA365152BF6F05DB20656DE8FEA2263.asc">downloaden</a>.
-	Je kunt me daarnaast vinden op <a href="https://keybase.io/daanvanmonsjou" target = "_blank">Keybase</a>.</p>
+	<p>If you'd like, you can use PGP to encrypt the contents of your e-mail. You can do this using your prefered software, like <a href="https://www.gpg4win.org" target = "_blank">Gpg4win</a> for Windows or <a href="https://gpgtools.org/" target = "_blank">GPG Suite</a> for macOS. This way, you can be sure that your message will only be read by me.</p>
+	<p>You can either <a href="/files/pgp-public.txt" target = "_blank">view</a> or <a href="/files/PGP-DaanvM-F82472E95EA365152BF6F05DB20656DE8FEA2263.asc">download</a> my public key.
+	I'm also on <a href="https://keybase.io/daanvanmonsjou" target = "_blank">Keybase</a>.</p>
 	<p>Fingerprint: <code>F824 72E9 5EA3 6515 2BF6 F05D B206 56DE 8FEA 2263</code></p>
-	<p>Als je wilt dat ik je met PGP-versleuteling terugmail, plak dan jouw public key als plain text in je e-mailbericht.</p>
+	<p>If you want me to reply to your e-mail using PGP-encryption, please paste your public key in your e-mail as plain text.</p>
 </div>
 
 <div id="telefoon">
-	<h4>📞  Telefoon</h4>
-	<p>Uiteraard ben ik ook telefonisch bereikbaar op het volgende nummer:</p>
+	<h4>📞  Phone</h4>
+	<p>Naturally, you can reach me by phone:</p>
 	<p><code>+31 (0)6 2604 5919</code></p>
-	<p>Dit telefoonnummer werkt ook voor <a href="https://www.signal.org/" target = "_blank">Signal</a> (veiliger) en <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
-	<p>Je kunt met oog op privacy eventueel een prepaid simkaart gebruiken. Deze kun je al voor een paar euro aanschaffen bij Primera.</p>
-	<p>Berichten via Signal en WhatsApp worden op dit nummer sporadisch gecheckt. Je kunt me eventueel per mail een heads-up sturen.</p> 
+	<p>This number also works with <a href="https://www.signal.org/" target = "_blank">Signal</a> (more secure) and <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
+	<p>It might be a good idea to use a prepaid simcard if privacy is a concern.</p>
+	<p>Messages via Signal and WhatsApp will only be checked sporadically. However, feel free to send me a heads-up via e-mail!</p> 
 </div>
 
 <div id="overig">
-	<h4>📫  Overig</h4>
+	<h4>📫  Other</h4>
 	
-	<p>Ik ben ook bereikbaar via de volgende diensten:</p>
+	<p>I'm also on the following services:</p>
 	
 	<p><a href="https://threema.id/YEYVFWSK" target = "_blank">Threema</a>: 
 	<code> YEYVFWSK </code></p>
@@ -64,9 +63,9 @@
 </div>
 	
 <div id="Tweakers_publeaks">
-	<h4>📰  Tweakers tippen?</h4>
-	<p>Wil je een anonieme tip naar Tweakers sturen? Dat kun je beter via <a href="https://www.publeaks.nl/" target = "_blank">Publeaks</a> doen. Dit is een Nederlands platform waarmee je veilig informatie kunt lekken naar de pers.</p>
-	<p>Op de website van Publeaks vind je instructies. Volg deze nauwlettend. Selecteer vervolgens Tweakers als ontvanger. Je bericht komt zo bij de juiste persoon terecht.</p><br><br><hr>
+	<h4>📰  Want to contact Tweakers?</h4>
+	<p>Would you like to leak information to Tweakers specifically? Feel free to use <a href="https://www.publeaks.nl/" target = "_blank">Publeaks</a>. This is a Dutch platform whistleblowers can use to safely and anonymously leak information to the press.</p>
+	<p>You'll find instructions on the website of Publeaks. Follow these with care, and select Tweakers as a recipient. Your message will find its way to the right person.</p><br><br><hr>
 </div>
 </body>
 	
