--- a/contact.html
+++ b/contact.html
@@ -20,12 +20,12 @@
 </div>
 
 <div id="text">
-	<p>Would you rather contact me anonymously, for example to share sensitive information? That's possible! Below you'll find some (safe) ways to reach me.</p>
-	<p>Isn't anonimity a neccessity? Check out <a href="https://daanvanmonsjou.nl/">my homepage</a> for other contact details.</p>
+	<p>Would you rather contact me anonymously? That's possible! Below you'll find some (safe and secure) ways to reach me.</p>
+	<p>Is anonimity not a neccessity? Check out <a href="https://daanvanmonsjou.com/">my homepage</a> for other contact details.</p>
 	
 <div id="proton">
 	<h4>📧  Protonmail</h4>
-	<p>The easiest way to reach me securely and anonymously, is using <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, a secure e-mail service based in Switzerland. 
+	<p>The easiest way to reach me securely and anonymously, is using <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, a secure e-mail service based in Switzerland.</p>
 	<p>If possible, please use the <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> when creating an anonymous Protonmail-account.</p>
 	<p>After you've done that, send your message to <a href="mailto:daanvanmonsjou@protonmail.com">daanvanmonsjou@protonmail.com</a>. Your e-mail will reach me fully encrypted.</p>
 	<p>Tip: Protonmail has a <a href="https://protonirockerxow.onion/" target = "_blank">separate website</a> specifically for the Tor-browser. You can't open this link using a 'regular' webbrowser like Chrome or Firefox.</p>
