--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 		<br>
 		<h4>💬 Contact</h4>
 		<p>You can reach me in the following ways:</p>
-		<br>
 		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail</a> | 
 		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
 		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
@@ -58,7 +57,7 @@
       </div>
 	</div>
 		<br>
-		<p>Would you like to share sensitive information with me or would you simply prefer to remain anonymous?<br>That's all good! Simply <a href="/contact">click here</a>.</p>
+		<p>Would you like to share sensitive information with me or would you simply prefer to remain anonymous?</p><p>That's all good! Simply <a href="/contact">click here</a>.</p>
 		<br><br>
 		<hr>
 		</p>
