--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
 	</div>
 		<br>
-		<p>Would you like to share sensitive information with me or would you simply prefer to remain anonymous?</p><p>That's all good! Simply <a href="/contact">click here</a>.</p>
+		<p>Would you like to share sensitive information or do you simply prefer to remain anonymous?</p><p>That's all good! Simply <a href="/contact">click here</a>.</p>
 		<br><br>
 		<hr>
 		</p>
