--- a/portfolio.html
+++ b/portfolio.html
@@ -20,13 +20,13 @@
 	</div>
 	
 	<div>
-		<p>Hieronder vind je enkele artikelen die ik voor mijn opdrachtgevers heb geschreven.</p>
-		<p>Genoeg gezien? <a href="https://daanvanmonsjou.nl">Klik hier</a> om terug te gaan naar mijn homepage.</p>
+		<p>Below you'll find some of my work.</p>
+		<p>Seen enough? <a href="https://daanvanmonsjou.nl">Click here</a> to return to my homepage.</p>
 		<br>
 	</div>
 
 	<div>
-		<h4>💻  Tweakers</h4>
+		<h4>💻  Tweakers (Dutch)</h4>
 			<ul style="list-style-type:disc;">
 				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">Achtergrond: Hoe staat het met realtime raytracing?</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96: E3-koehandel, raytracing en waf-beperkingen</a></li></p>
@@ -42,7 +42,7 @@
 	</div>
 
 	<div>
-		<h4>💾  OC3D</h4>
+		<h4>💾  OC3D (English)</h4>
 			<ul style="list-style-type:disc;">
 				<p><li><a href="https://www.overclock3d.net/news/cpu_mainboard/ryzen_-_am4_feature_roundup/1" target = "_blank">AMD Ryzen - Socket AM4 Feature Roundup</a></li></p>
 				<p><li><a href="https://www.overclock3d.net/news/gpu_displays/meet_manus_-_the_world_s_first_consumer_virtual_reality_glove/1" target = "_blank">Meet Manus - the world's first consumer virtual reality glove</a></li></p>
