--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<p>Hi! I'm Daan, freelance technology journalist and Journalism student.</p>
 		<p>Currently, I'm a freelance news editor for <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>, a Dutch tech publication. I also used to be an intern there.</p>
 		<p>I used to write news articles for <a href="https://overclock3d.net" target = "_blank">OC3D</a> (English) and <a href="https://www.invader.be/" target = "_blank">Invader</a> (Dutch).</p>
-		<p>I mostly write about technology, including computer hardware and -software, video games, privacy/security and science.</p>
+		<p>I mostly cover technology, including computer hardware and -software, video games, privacy/security and science.</p>
 		<br>
 		<h4>📝 My Work</h4>
 		<p>Curious about my work? Have a look at <a href="https://daanvanmonsjou.com/portfolio">my portfolio</a>.</p>
