--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 	<div>
 		<br>
 		<h4>💬 Contact</h4>
-		<p>You can reach me in the following ways:</p>
-		<div><p><a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail</a> | 
+		<p>You can reach me in the following ways:
+		<br><br>
+		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail</a> | 
 		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
 		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
