--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 	<p>Naturally, you can reach me by phone:</p>
 	<p><code>+31 (0)6 2604 5919</code></p>
 	<p>This number also works with <a href="https://www.signal.org/" target = "_blank">Signal</a> (more secure) and <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
-	<p>Messages via Signal and WhatsApp will only be checked sporadically. However, feel free to send me a heads-up via e-mail!</p> 
+	<p>Messages via Signal and WhatsApp will only be checked sporadically on this number. However, feel free to send me a heads-up via e-mail!</p> 
 	<p>Pro-tip: it might be a good idea to use a prepaid simcard (bought with cash) if privacy is a concern.</p>
 </div>
 
