--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
 	<link rel="icon" href="images/icon.png">
 	
-	<!-- click to reveal-script, met dank aan Trevor Atlas op codepen.io -->
+	<!-- click to reveal-script, met dank aan Trevor Atlas op codeContact me anonymouslyContact me anonymouslyContact me anonymouslypen.io -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script type="text/javascript"; src="https://daanvanmonsjou.nl/script.js"></script>
 </head>
@@ -30,7 +30,7 @@
 	<div>
 		<br>
 		<h4>👨‍💻 About Me</h4>
-		<p>Hi, I'm Daan! I work as a freelance technology journalist. I'm in my third year at college, where I major in journalism.</p>
+		<p>Hi, I'm Daan! I work as a freelance technology journalist, and I'm in my third year at college, where I major in journalism.</p>
 		<p>Currently, I'm a freelance news editor for <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>, a Dutch tech publication. I also used to be an intern there.</p>
 		<p>Before all that, I used to write news articles for <a href="https://overclock3d.net" target = "_blank">OC3D</a> (English) and <a href="https://www.invader.be/" target = "_blank">Invader</a> (Dutch).</p>
 		<p>I mostly cover technology, including computer hardware and -software, video games, privacy/security and science.</p>
