--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 		<h4>👨‍💻 About Me</h4>
 		<p>Hi! I'm Daan, freelance journalist. I currently work as a freelance news editor for <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>, a Dutch tech publication. I used to be an intern there.</p>
 		<p>Before all that, I used to write news articles for <a href="https://overclock3d.net" target = "_blank">OC3D</a> (English) and <a href="https://www.invader.be/" target = "_blank">Invader</a> (Dutch).</p>
-		<p>I mostly cover technology, including computer hardware and -software, video games, privacy/security and science.</p>
+		<p>I mostly cover technology, including computer hardware and software, video games, privacy/security and science.</p>
 		<br>
 		<h4>📝 My Work</h4>
 		<p>Curious about my work? Have a look at <a href="https://daanvanmonsjou.com/portfolio">my portfolio</a>.</p>
-		<p>Sometimes, I write stuff for college (in Dutch). You'll find these articles on <a href="https://medium.com/@DaanvanMonsjou" target = "_blank">Medium</a>.</p>
+		<p>Sometimes, I write articles for college (in Dutch). You'll find these on <a href="https://medium.com/@DaanvanMonsjou" target = "_blank">Medium</a>.</p>
 	</div>
 	<div>
 		<br>
@@ -45,7 +45,7 @@
 		<br><br>
 		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail</a> | 
 		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
-		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
+		<a href="https://www.linkedin.com/in/daanvanmonsjou/en" target = "_blank">LinkedIn</a> |
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
 		<div id="hover-area">
 			<p id="telefoonklik">Phone (click to reveal)</p>
@@ -57,7 +57,7 @@
       </div>
 	</div>
 		<br>
-		<p>Would you like to share sensitive information, or do you simply prefer to remain anonymous? That's all good! Simply <a href="/contact">click here</a>.</p>
+		<p>Would you like to share sensitive information, or do you simply prefer to remain anonymous? That's all good! <a href="/contact">Click here</a> to find out how.</p>
 		<br><br>
 		<hr>
 		</p>
