--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Leuk dat je kijkt naar m'n broncode. Ik kan eigenlijk helemaal niet programmeren, dus bij voorbaar mijn excuses. -->
+<!-- How nice of you to check out my website. I'm actually a terrible programmer, so please forgive my messy code. -->
 
 <head>
 	<!-- meta & title -->
@@ -15,7 +15,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
 	<link rel="icon" href="images/icon.png">
 	
-	<!-- click to reveal-script, met dank aan Trevor Atlas op codeContact me anonymouslyContact me anonymouslyContact me anonymouslypen.io -->
+	<!-- Click to reveal-script, thanks to Trevor Atlas at codepen.io -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script type="text/javascript"; src="https://daanvanmonsjou.nl/script.js"></script>
 </head>
