--- a/portfolio.html
+++ b/portfolio.html
@@ -28,15 +28,15 @@
 	<div>
 		<h4>💻  Tweakers (Dutch)</h4>
 			<ul style="list-style-type:disc;">
-				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">Achtergrond: Hoe staat het met realtime raytracing?</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96: E3-koehandel, raytracing en waf-beperkingen</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/162226/een-terugblik-op-windows-7-vista-maar-dan-beter.html" target = "_blank">Nieuws: Een terugblik op Windows 7 - 'Vista, maar dan beter'</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/158576/ontwikkelaar-vindt-kwetsbaarheid-in-sudo-commando-voor-linux.html" target = "_blank">Nieuws: Ontwikkelaar vindt kwetsbaarheid in sudo-commando voor Linux</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/160062/hacker-publiceert-2tb-aan-data-van-cayman-national-bank.html" target = "_blank">Nieuws: Hacker publiceert 2TB aan data van Cayman National Bank</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/158896/microsoft-wil-pcs-met-secured-core-label-beschermen-tegen-firmware-aanvallen.html" target = "_blank">Nieuws: Microsoft wil pc's met Secured-core-label beschermen tegen firmware-aanvallen</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/159196/het-begon-met-een-error-de-voorganger-van-internet-begon-50-jaar-geleden.html" target = "_blank">.geek: Het begon met een error - De voorganger van internet begon 50 jaar geleden</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/165210/zeldzame-gtx-480-gpu-met-512-cuda-cores-duikt-op.html" target = "_blank">.geek: Zeldzame GTX 480-gpu met 512 Cuda-cores duikt op</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/157896/half-life-2-personages-kunnen-na-vijf-jaar-eindelijk-weer-met-hun-ogen-knipperen.html" target = "_blank">.geek: Half-Life 2-personages kunnen na vijf jaar eindelijk weer met hun ogen knipperen</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">In-depth feature: The current state of real-time ray tracing</a></li></p>
+				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/162226/een-terugblik-op-windows-7-vista-maar-dan-beter.html" target = "_blank">Obituary: A retrospective look at Windows 7 - 'Vista, but better'</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/158576/ontwikkelaar-vindt-kwetsbaarheid-in-sudo-commando-voor-linux.html" target = "_blank">News: Developer finds vulnerability in sudo-command for Linux</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/160062/hacker-publiceert-2tb-aan-data-van-cayman-national-bank.html" target = "_blank">News: Hacker publishes 2TB of data from Cayman National Bank</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/158896/microsoft-wil-pcs-met-secured-core-label-beschermen-tegen-firmware-aanvallen.html" target = "_blank">News: Microsoft wants to protect pc's against firmware-attacks with Secured-Core label</a></li></p>
+				<p><li><a href="https://tweakers.net/geek/159196/het-begon-met-een-error-de-voorganger-van-internet-begon-50-jaar-geleden.html" target = "_blank">Geek: It started with an error - The internet's predecessor started 50 years ago</a></li></p>
+				<p><li><a href="https://tweakers.net/geek/165210/zeldzame-gtx-480-gpu-met-512-cuda-cores-duikt-op.html" target = "_blank">Geek: Rare Nvidia GTX 480 with 512 CUDA cores pictured</a></li></p>
+				<p><li><a href="https://tweakers.net/geek/157896/half-life-2-personages-kunnen-na-vijf-jaar-eindelijk-weer-met-hun-ogen-knipperen.html" target = "_blank">Geek: Half-Life 2 characters can finally blink again</a></li></p>
 		</ul>
 		<br>
 	</div>
