--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 	
 	<div>
 		<p>Below you'll find some of my work.</p>
-		<p>Seen enough? <a href="https://daanvanmonsjou.nl">Click here</a> to return to my homepage.</p>
+		<p>Seen enough? <a href="https://daanvanmonsjou.com">Click here</a> to return to my homepage.</p>
 		<br>
 	</div>
 
