--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 	<p>You can either <a href="/files/pgp-public.txt" target = "_blank">view</a> or <a href="/files/PGP-DaanvM-F82472E95EA365152BF6F05DB20656DE8FEA2263.asc">download</a> my public key.
 	I'm also on <a href="https://keybase.io/daanvanmonsjou" target = "_blank">Keybase</a>.</p>
 	<p>Fingerprint: <code>F824 72E9 5EA3 6515 2BF6 F05D B206 56DE 8FEA 2263</code></p>
-	<p>If you want me to reply to your e-mail using PGP-encryption, please paste your public key in your e-mail as plain text.</p>
+	<p>If you want me to reply to your e-mail using PGP-encryption, please include your public key in the contents of your e-mail as plain text.</p>
 </div>
 
 <div id="telefoon">
