--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 	</div>
 	
 	<div>
-		<p>Below you'll find some of my work.</p>
+		<p>Below you'll find some of my work. My most recent work is all on Tweakers. Those articles are all written in Dutch, however.</p>
 		<p>Seen enough? <a href="https://daanvanmonsjou.com">Click here</a> to return to my homepage.</p>
 		<br>
 	</div>
