--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 	<div>
 		<br>
 		<h4>👨‍💻 About Me</h4>
-		<p>Hi! I'm Daan, freelance journalist. I currently work as a freelance news editor for <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>, a Dutch tech publication. I used to be an intern there.</p>
+		<p>Hi! I'm a freelance journalist. I currently work as a freelance news editor for Dutch tech publication <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>.</p>
 		<p>Before all that, I used to write news articles for <a href="https://overclock3d.net" target = "_blank">OC3D</a> (English) and <a href="https://www.invader.be/" target = "_blank">Invader</a> (Dutch).</p>
 		<p>I mostly cover technology, including computer hardware and software, mobile technology, video games, and privacy/security.</p>
 		<br>
 		<h4>📝 My Work</h4>
 		<p>Curious about my work? Have a look at <a href="https://daanvanmonsjou.com/portfolio">my portfolio</a>.</p>
-		<p>Sometimes, I write articles for college (in Dutch). You'll find these on <a href="https://medium.com/@DaanvanMonsjou" target = "_blank">Medium</a>.</p>
+		<p>Sometimes, I write articles for college (in Dutch). You'll find my favourites on <a href="https://medium.com/@DaanvanMonsjou" target = "_blank">Medium</a>.</p>
 	</div>
 	<div>
 		<br>
@@ -64,5 +64,5 @@
 	</div>
 </body>
 <footer>
-	<br><div> Hosting via <a href="https://pages.github.com/"; target = "_blank";>Github Pages</a></div><br>
+	<br><div>Hosting via <a href="https://pages.github.com/"; target = "_blank";>Github Pages</a>.</div><br>
 </footer>
