--- a/index.html
+++ b/index.html
@@ -64,5 +64,5 @@
 	</div>
 </body>
 <footer>
-	<br><div>Hosting via <a href="https://pages.github.com/"; target = "_blank";>Github Pages</a>.</div><br>
+	<br><div>Hosting via <a href="https://pages.github.com/"; target = "_blank";>Github Pages</a></div><br>
 </footer>
