--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<br>
 		<h4>📝 My Work</h4>
 		<p>Curious about my work? Have a look at <a href="https://daanvanmonsjou.com/portfolio">my portfolio</a>.</p>
-		<p>Sometimes, I write articles for college (in Dutch). You'll find my favourites on <a href="https://medium.com/@DaanvanMonsjou" target = "_blank">Medium</a>.</p>
+		<p>Sometimes, I write articles for college (in Dutch). You'll find some of my favourites on <a href="https://medium.com/@DaanvanMonsjou" target = "_blank">Medium</a>.</p>
 	</div>
 	<div>
 		<br>
