--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,9 @@
 	<h4>📧  Protonmail</h4>
 	<p>The easiest way to reach me securely and anonymously, is using <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, a secure e-mail service based in Switzerland.</p>
 	<p>If possible, please use the <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> when creating an anonymous Protonmail-account.</p>
-	<p>After you've done that, send your message to <a href="mailto:daanvanmonsjou@protonmail.com">daanvanmonsjou@protonmail.com</a> using your brand-new Protonmail-address. Your e-mail will reach me, fully encrypted and all.</p>
-	<p>Tip: Protonmail has a <a href="https://protonirockerxow.onion/" target = "_blank">separate, optional website</a> specifically for the Tor-browser. You can't open this link using a 'regular' webbrowser like Chrome or Firefox.</p>
+	<p>After you've done that, send your message to <code>daanvanmonsjou@protonmail.com</code> using your brand-new Protonmail-address. Your e-mail will reach me, fully encrypted and all.</p>
+	<p>Tip: Protonmail has a separate, optional website specifically for the Tor-browser: <code>https://protonirockerxow.onion/</code></p>
+	<p>Do note that you cannot open this link using a 'regular' webbrowser like Chrome or Firefox.</p>
 </div>
 	
 <div id="PGP">
