--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
 <div id="Tweakers_publeaks">
 	<h4>📰  Want to contact Tweakers?</h4>
 	<p>Would you like to leak information to Tweakers specifically? Feel free to use <a href="https://www.publeaks.nl/" target = "_blank">Publeaks</a>. This is a Dutch platform whistleblowers can use to safely and anonymously leak information to the press.</p>
-	<p>You'll find instructions on the website of Publeaks. Follow these with care, and select Tweakers as a recipient. Your message will find its way to the right person.</p><br><br><hr>
+	<p>You'll find instructions on the website of Publeaks. Follow these with care, and select Tweakers as a recipient. Your message will find its way to the right person. Sadly, this website is only available in Dutch.</p><br><br><hr>
 </div>
 </body>
 	
