--- a/index.html
+++ b/index.html
@@ -64,5 +64,6 @@
 	</div>
 </body>
 <footer>
+	<div>View this site in <a href="https://daanvanmonsjou.nl">Dutch</a></dv></br>
 	<br><div>Hosting via <a href="https://pages.github.com/"; target = "_blank";>Github Pages</a></div><br>
 </footer>
