--- a/contact.html
+++ b/contact.html
@@ -25,19 +25,20 @@
 	
 <div id="proton">
 	<h4>📧  Protonmail</h4>
-	<p>The easiest way to reach me securely and anonymously, is using <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, a secure e-mail service based in Switzerland.
-	<p>If possible, please use the <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> when creating an anonymous Protonmail-account. After you've done that, send your message to <a href="mailto:daanvanmonsjou@protonmail.com">daanvanmonsjou@protonmail.com</a> using your brand-new Protonmail-address. Your e-mail will reach me, fully encrypted and all.</p>
+	<p>The easiest way to reach me securely and anonymously, is using <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, an e-mail service based in Switzerland. In most cases, Protonmail is sufficiently secure. Proton has written <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">a blogpost</a> with use-cases for their service.</p>
+	<p>If possible, please use the <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> when creating an anonymous Protonmail-account. After you've done that, send your message to <a href="mailto:daanvanmonsjou@protonmail.com">daanvanmonsjou@protonmail.com</a></p>
 	<p>Tip: Protonmail has a separate, optional website specifically for the Tor-browser: <code>https://protonirockerxow.onion/</code></p>
 	<p>Do note that you cannot open this link using a 'regular' webbrowser like Chrome or Firefox.</p>
 </div>
 	
 <div id="PGP">
 	<h4>🔐  PGP</h4>
-	<p>If you'd like, you can use PGP to encrypt the contents of your e-mail. You can do this using your prefered software, like <a href="https://www.gpg4win.org" target = "_blank">Gpg4win</a> for Windows or <a href="https://gpgtools.org/" target = "_blank">GPG Suite</a> for macOS. This way, you can be sure that your message will only be read by me.</p>
+	<p>If you'd like, you can use PGP to encrypt the contents of your e-mail. This provides an extra layer of protection, which can be vital if you're sharing sensitive information.</p>
+	<p>You can encrypt your message using your prefered software, like <a href="https://www.gpg4win.org" target = "_blank">Gpg4win</a> for Windows or <a href="https://gpgtools.org/" target = "_blank">GPG Suite</a> for macOS. This way, you can be sure that your message will only be read by me.</p>
 	<p>You can either <a href="/files/pgp-public.txt" target = "_blank">view</a> or <a href="/files/PGP-DaanvM-F82472E95EA365152BF6F05DB20656DE8FEA2263.asc">download</a> my public key.
 	I'm also on <a href="https://keybase.io/daanvanmonsjou" target = "_blank">Keybase</a>.</p>
 	<p>Fingerprint: <code>F824 72E9 5EA3 6515 2BF6 F05D B206 56DE 8FEA 2263</code></p>
-	<p>If you want me to reply to your e-mail using PGP-encryption, please include your public key in the contents of your e-mail as plain text.</p>
+	<p>If you want me to reply to your e-mail using PGP-encryption, please include your public key in the contents of your e-mail <b>as plain text</b>.</p>
 </div>
 
 <div id="telefoon">
