--- a/contact.html
+++ b/contact.html
@@ -71,5 +71,5 @@
 </body>
 	
 <footer>
-	<br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
+	<br><div>View this page in <a href="https://daanvanmonsjou.nl/contact">Dutch</a></div><br>
 </footer>
