--- a/contact.html
+++ b/contact.html
@@ -71,5 +71,5 @@
 </body>
 	
 <footer>
-	<br><div>View this page in <a href="https://daanvanmonsjou.nl/contact">Dutch</a></div><br>
+	<br><p>View this page in <a href="https://daanvanmonsjou.nl/contact">Dutch</a></p><br>
 </footer>
