--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 <div id="proton">
 	<h4>📧  Protonmail</h4>
 	<p>The easiest way to reach me securely and anonymously, is using <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, an e-mail service based in Switzerland. In most cases, Protonmail is sufficiently secure. Proton has written <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">a blogpost</a> with use-cases for their service.</p>
-	<p>If possible, please use the <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> when creating an anonymous Protonmail-account. After you've done that, send your message to <code>daanvanmonsjou@protonmail.com</code></p>
+	<p>If possible, please use the <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> when creating an anonymous Protonmail-account.<br>After you've done that, send your message to: <code>daanvanmonsjou@protonmail.com</code></p>
 	<p>Tip: Protonmail has a separate, optional website specifically for the Tor-browser: <code>https://protonirockerxow.onion/</code></p>
 	<p>Do note that you cannot open this link using a 'regular' webbrowser like Chrome or Firefox.</p>
 </div>
