--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,7 @@
 				<p><li><a href="https://tweakers.net/nieuws/158576/ontwikkelaar-vindt-kwetsbaarheid-in-sudo-commando-voor-linux.html" target = "_blank">News: Developer finds vulnerability in sudo-command for Linux</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/160062/hacker-publiceert-2tb-aan-data-van-cayman-national-bank.html" target = "_blank">News: Hacker publishes 2TB of data from Cayman National Bank</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/158896/microsoft-wil-pcs-met-secured-core-label-beschermen-tegen-firmware-aanvallen.html" target = "_blank">News: Microsoft wants to protect pc's against firmware-attacks with Secured-Core label</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/160040/ford-brengt-eind-2020-zijn-eerste-elektrische-auto-naar-nederland.html" target = "_blank">News: Ford will bring its first electric car to the Netherlands in 2020</a></li></p>		
 				<p><li><a href="https://tweakers.net/geek/159196/het-begon-met-een-error-de-voorganger-van-internet-begon-50-jaar-geleden.html" target = "_blank">Geek: It started with an error - The internet's predecessor started 50 years ago</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/165210/zeldzame-gtx-480-gpu-met-512-cuda-cores-duikt-op.html" target = "_blank">Geek: Rare Nvidia GTX 480 with 512 CUDA cores pictured</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/157896/half-life-2-personages-kunnen-na-vijf-jaar-eindelijk-weer-met-hun-ogen-knipperen.html" target = "_blank">Geek: Half-Life 2 characters can finally blink again</a></li></p>
