--- a/portfolio.html
+++ b/portfolio.html
@@ -59,5 +59,5 @@
 </body>
 
 <footer>
-	<p>View this page in <a href="https://daanvanmonsjou.nl/portfolio">Dutch</a></p>
+	<p>View this page in <a href="https://daanvanmonsjou.com/portfolio">Dutch</a></p>
 </footer>
