--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,7 @@
 		<h4>💻  Tweakers (Dutch)</h4>
 			<ul style="list-style-type:disc;">
 				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">In-depth feature: The current state of real-time ray tracing</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">Interview: 'Next-gen will be amazing' - Interview with Billy Khan from id Software</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/162226/een-terugblik-op-windows-7-vista-maar-dan-beter.html" target = "_blank">Obituary: A retrospective look at Windows 7 - 'Vista, but better'</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/158576/ontwikkelaar-vindt-kwetsbaarheid-in-sudo-commando-voor-linux.html" target = "_blank">News: Developer finds vulnerability in sudo-command for Linux</a></li></p>
