--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,15 @@
 		</ul>
 		<br>
 	</div>
-
+	
+	<div>
+		<h4>📰	RTV Oost</h4>
+			<ul style="list-style-type:disc;">
+				<p><li><a href="http://verhalen.rtvoost.nl/untitled-project-zbrs7" target = "_blank">Online Crime - A new trend in ransomware</a> (scroll down for my contribution)</li></p>
+			</ul>
+			<br>
+	</div>
+	
 	<div>
 		<h4>💾  OC3D (English)</h4>
 			<ul style="list-style-type:disc;">
@@ -54,7 +62,7 @@
 				<p><li><a href="https://www.overclock3d.net/news/software/gog_galaxy_is_now_in_open_beta/1" target = "_blank">GOG Galaxy is now in Open Beta</a></li></p>
 				<p><li><a href="https://www.overclock3d.net/news/gpu_displays/amd_is_teasing_an_upcoming_radeon_gpu_on_times_square/1" target = "_blank">AMD is teasing an upcoming Radeon GPU on Times Square</a></li></p>
 			</ul>
-		<br><br>
+		<br>
 		<hr>
 	</div>
 </body>
