--- a/portfolio.html
+++ b/portfolio.html
@@ -34,12 +34,13 @@
 				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/162226/een-terugblik-op-windows-7-vista-maar-dan-beter.html" target = "_blank">Obituary: A retrospective look at Windows 7 - 'Vista, but better'</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/173942/amd-radeon-rx-6800-xt-en-rx-6800-komen-18-november-uit-voor-649-en-579-dollar.html" target = "_blank">News: AMD Radeon RX 6800 XT and RX 6800 release 18 November for $649 and $579</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/174926/khronos-brengt-definitieve-specificatie-van-vulkan-raytracing-standaard-uit.html" target = "_blank">News: Khronos releases final specification for Vulkan Ray Tracing</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/169752/jedec-publiceert-definitieve-specificaties-van-ddr5-geheugenstandaard.html" target = "_blank">News: JEDEC publishes definitive DDR5-specification</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/158576/ontwikkelaar-vindt-kwetsbaarheid-in-sudo-commando-voor-linux.html" target = "_blank">News: Developer finds vulnerability in sudo-command for Linux</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/160062/hacker-publiceert-2tb-aan-data-van-cayman-national-bank.html" target = "_blank">News: Hacker publishes 2TB of data from Cayman National Bank</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/158896/microsoft-wil-pcs-met-secured-core-label-beschermen-tegen-firmware-aanvallen.html" target = "_blank">News: Microsoft wants to protect pc's against firmware-attacks with Secured-Core label</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/160040/ford-brengt-eind-2020-zijn-eerste-elektrische-auto-naar-nederland.html" target = "_blank">News: Ford will bring its first electric car to the Netherlands in 2020</a></li></p>		
 				<p><li><a href="https://tweakers.net/geek/159196/het-begon-met-een-error-de-voorganger-van-internet-begon-50-jaar-geleden.html" target = "_blank">Geek: It started with an error - The internet's predecessor started 50 years ago</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/165210/zeldzame-gtx-480-gpu-met-512-cuda-cores-duikt-op.html" target = "_blank">Geek: Rare Nvidia GTX 480 with 512 CUDA cores pictured</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/167944/nooit-uitgebrachte-nes-racegame-is-na-30-jaar-hersteld-vanaf-21-floppys.html" target = "_blank">Geek: Unreleased NES racing game has been restored from 21 floppy disks after 30 years</a></li></p>
 		</ul>
 		<br>
